# GetDiscordDevBadge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
.github/: README-ru.md
src/: index.js  main.cpp
src/bot/: hello.h  hello.js
src/cli/: index.js
